tree-sitter/test/corpus/comprehensive.txt
================================================================================
Advanced CURSED features
================================================================================

vibe main

yeet "math"
yeet "string"

facts (
    MAX_SIZE = 1000
    MIN_VALUE = 1
)

be_like Point squad {
    x normie
    y normie
}

be_like Shape collab {
    area() meal
    perimeter() meal
}

slay (p Point) area() meal {
    damn p.x * p.y
}

slay main() {
    sus point Point = Point{x: 10, y: 20}
    sus a normie = 10
    sus b normie = 20
    sus sum normie = a + b

    ready sum > 15 {
        vibez.spill("Large sum")
    } otherwise {
        vibez.spill("Small sum")
    }

    bestie i := 0; i < 5; i++ {
        vibez.spill(i)
    }
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (import_declaration
    (import_spec
      path: (string_literal)))
  (import_declaration
    (import_spec
      path: (string_literal)))
  (top_level_declaration
    (const_declaration
      (const_spec
        (identifier_list
          (identifier))
        (expression_list
          (expression
            (unary_expression
              (primary_expression
                (operand
                  (literal
                    (basic_literal
                      (int_literal)))))))))
      (const_spec
        (identifier_list
          (identifier))
        (expression_list
          (expression
            (unary_expression
              (primary_expression
                (operand
                  (literal
                    (basic_literal
                      (int_literal)))))))))))
  (top_level_declaration
    (type_declaration
      (type_spec
        name: (identifier)
        type: (type
          (struct_type
            (field_declaration
              (identifier_list
                (identifier))
              (type
                (type_name
                  (builtin_type))))
            (field_declaration
              (identifier_list
                (identifier))
              (type
                (type_name
                  (builtin_type)))))))))
  (top_level_declaration
    (type_declaration
      (type_spec
        name: (identifier)
        type: (type
          (interface_type
            (method_spec
              name: (identifier)
              (signature
                (parameters)
                (type
                  (type_name
                    (builtin_type)))))
            (method_spec
              name: (identifier)
              (signature
                (parameters)
                (type
                  (type_name
                    (builtin_type))))))))))
  (top_level_declaration
    (method_declaration
      (method_receiver
        (identifier)
        (type
          (type_name
            (identifier))))
      name: (identifier)
      (signature
        (parameters)
        (type
          (type_name
            (builtin_type))))
      (block
        (statement
          (return_statement
            (expression_list
              (expression
                (binary_expression
                  left: (expression
                    (unary_expression
                      (primary_expression
                        (selector_expression
                          operand: (primary_expression
                            (operand
                              (identifier)))
                          field: (identifier)))))
                  right: (expression
                    (unary_expression
                      (primary_expression
                        (selector_expression
                          operand: (primary_expression
                            (operand
                              (identifier)))
                          field: (identifier)))))))))))))
  (top_level_declaration
    (function_declaration
      name: (identifier)
      (signature
        (parameters))
      (block
        (statement
          (var_declaration
            (var_spec
              (identifier_list
                (identifier))
              (type
                (type_name
                  (identifier)))
              (expression_list
                (expression
                  (unary_expression
                    (primary_expression
                      (operand
                        (literal
                          (composite_literal
                            type: (type
                              (type_name
                                (identifier)))
                            body: (literal_value
                              (element_list
                                (keyed_element
                                  key: (expression
                                    (unary_expression
                                      (primary_expression
                                        (operand
                                          (identifier)))))
                                  value: (expression
                                    (unary_expression
                                      (primary_expression
                                        (operand
                                          (literal
                                            (basic_literal
                                              (int_literal))))))))
                                (keyed_element
                                  key: (expression
                                    (unary_expression
                                      (primary_expression
                                        (operand
                                          (identifier)))))
                                  value: (expression
                                    (unary_expression
                                      (primary_expression
                                        (operand
                                          (literal
                                            (basic_literal
                                              (int_literal))))))))))))))))))))
        (statement
          (var_declaration
            (var_spec
              (identifier_list
                (identifier))
              (type
                (type_name
                  (builtin_type)))
              (expression_list
                (expression
                  (unary_expression
                    (primary_expression
                      (operand
                        (literal
                          (basic_literal
                            (int_literal)))))))))))
        (statement
          (var_declaration
            (var_spec
              (identifier_list
                (identifier))
              (type
                (type_name
                  (builtin_type)))
              (expression_list
                (expression
                  (unary_expression
                    (primary_expression
                      (operand
                        (literal
                          (basic_literal
                            (int_literal)))))))))))
        (statement
          (var_declaration
            (var_spec
              (identifier_list
                (identifier))
              (type
                (type_name
                  (builtin_type)))
              (expression_list
                (expression
                  (binary_expression
                    left: (expression
                      (unary_expression
                        (primary_expression
                          (operand
                            (identifier)))))
                    right: (expression
                      (unary_expression
                        (primary_expression
                          (operand
                            (identifier)))))))))))
        (statement
          (if_statement
            condition: (expression
              (binary_expression
                left: (expression
                  (unary_expression
                    (primary_expression
                      (operand
                        (identifier)))))
                right: (expression
                  (unary_expression
                    (primary_expression
                      (operand
                        (literal
                          (basic_literal
                            (int_literal)))))))))
            consequence: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (literal
                                        (basic_literal
                                          (string_literal))))))))))))))))
            alternative: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (literal
                                        (basic_literal
                                          (string_literal))))))))))))))))))
        (statement
          (for_statement
            (for_clause
              init: (simple_statement
                (short_var_declaration
                  left: (identifier_list
                    (identifier))
                  right: (expression_list
                    (expression
                      (unary_expression
                        (primary_expression
                          (operand
                            (literal
                              (basic_literal
                                (int_literal))))))))))
              condition: (expression
                (binary_expression
                  left: (expression
                    (unary_expression
                      (primary_expression
                        (operand
                          (identifier)))))
                  right: (expression
                    (unary_expression
                      (primary_expression
                        (operand
                          (literal
                            (basic_literal
                              (int_literal)))))))))
              update: (simple_statement
                (inc_dec_statement
                  operand: (expression
                    (unary_expression
                      (primary_expression
                        (operand
                          (identifier))))))))
            body: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (identifier))))))))))))))))))))
